--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,12 @@
+altgraph==0.17
+future==0.18.2
+importlib-metadata==4.6.1
 numpy==1.21.1
 opencv-contrib-python==4.5.3.56
+pefile==2021.5.24
+Pillow==8.3.1
+pyinstaller==4.4
+pyinstaller-hooks-contrib==2021.2
+pywin32-ctypes==0.2.0
+typing-extensions==3.10.0.0
+zipp==3.5.0
